--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,76 @@
 <resources>
-    <string name="app_name">Alarmv1</string>
+    <!--- Ресурсы для английского языка-->
+    <string name="app_name">Alarm</string>
     <string name="action_settings">Settings</string>
-    <string name="on">Активен</string>
-    <string name="off">Не активен</string>
-    <string name="string_hint">Название будильника</string>
-    <string name="choise_melodie">Выберите рингтон</string>
-    <string name="ok">Подтвердить</string>
-    <string name="cancel">Отмена</string>
-    <string name="delete_string">Вы хотите удалить этот будильник?</string>
-    <string name="SDcard">С карты памяти</string>
-    <string name="InternalStore">Стандартная музыка приложения</string>
-    <string name="choise_sourse">Источник музыки</string>
-    <string name="ONOFF">Включить/Отключить</string>
-    <string name="STOP">Стоп</string>
-    <string name="about">Информация</string>
-    <string name="stop_service">Нажми на колокольчик, чтобы остановить этот звонок</string>
+    <string name="on">Active</string>
+    <string name="off">Passive</string>
+    <string name="string_hint">Name of alarm</string>
+    <string name="choise_melodie">Select ringtone</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete_string">Do you want to delete this alarm clock?</string>
+    <string name="SDcard">From SD card</string>
+    <string name="InternalStore">Standard music of application</string>
+    <string name="choise_sourse">Music source</string>
+    <string name="ONOFF">ON/OFF</string>
+    <string name="STOP">Stop</string>
+    <string name="about">Information</string>
+    <string name="stop_service">Push the bell to stop this call</string>
+    <string name="chooseday">Select the days week of the call</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
+    <string name="chooseDays">Alarm Days of the Week</string>
+
+    <string name="mon">Mon</string>
+    <string name="tues">Tue</string>
+    <string name="wed">Wed</string>
+    <string name="thurs">Thu</string>
+    <string name="fri">Fri</string>
+    <string name="sat">Sat</string>
+    <string name="sun">Sun</string>
+    <string name="alarmthrow">Alarm clock will ring through</string>
+    <string name="alarmoff">Turn off the alarm</string>
+    <string name="clicknotif">Click on the notification</string>
+    <string name="Alarmthrow">Alarm clock will ring through</string>
+    <plurals name="days">
+        <item quantity="zero">day</item>
+        <item quantity="one">%d day</item>
+        <item quantity="two">%d days</item>
+        <item quantity="few">%d days</item>
+        <item quantity="many">%d days</item>
+        <item quantity="other">%d days</item>
+    </plurals>
+    <plurals name="hours">
+        <item quantity="zero">hour</item>
+        <item quantity="one">%d hour</item>
+        <item quantity="two">%d hours</item>
+        <item quantity="few">%d hours</item>
+        <item quantity="many">%d hours</item>
+        <item quantity="other">%d hours</item>
+    </plurals>
+    <plurals name="minutes">
+        <item quantity="zero">minute</item>
+        <item quantity="one">%d minute</item>
+        <item quantity="two">%d minutes</item>
+        <item quantity="few">%d minutes</item>
+        <item quantity="many">%d minutes</item>
+        <item quantity="other">%d minutes</item>
+    </plurals>
+    <plurals name="seconds">
+        <item quantity="zero">second</item>
+        <item quantity="one">%d second</item>
+        <item quantity="two">%d seconds</item>
+        <item quantity="few">%d seconds</item>
+        <item quantity="many">%d seconds</item>
+        <item quantity="other">%d seconds</item>
+    </plurals>
+    <!--- Ресурсы активности about-->
+    <string name="ab_string">This is a simple alarm manager, which allows you to schedule your awakening </string>
+    <string name="connwithUs">Connect with us</string>
+    <string name="copy_right">CopyRight Guziy Eugen</string>
 </resources>
